login page locator added and testcase added